--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -365,14 +365,16 @@
                 <Button x:Name="DelRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Width="80" Height="30" FontSize="12" Content="删除" Margin="0,1,20,0" Click="DelRowBtn_Click" />
                 <Button x:Name="pauseTestBtn" Width="80" DockPanel.Dock="Right" HorizontalAlignment="Right" Height="30" FontSize="12" Content="暂停测试" Margin="0,1,60,0" Click="pauseTestBtn_Click" />
                 <Button x:Name="startTestBtn" Width="80" DockPanel.Dock="Right" HorizontalAlignment="Right" Height="30" FontSize="12" Content="开始测试" Margin="0,1,20,0" Click="startTestBtn_Click" />
+                <iconPacks:PackIconMaterial x:Name="AnimatedColorButton" Visibility="Hidden" Kind="CheckCircle" Foreground="Red" Width="40" Height="40" Spin="True" Margin="0,3,0,0"></iconPacks:PackIconMaterial>
             </DockPanel>
+            <!--
             <StackPanel  DockPanel.Dock="Top" Height="50" Orientation="Vertical">
-                <Border x:Name="AnimatedColorButton" Width="48" Height="48" BorderThickness="5" BorderBrush="Gold" CornerRadius="50" Visibility="Hidden">
+                <Border x:Name="AnimatedColorButton1" Width="48" Height="48" BorderThickness="5" BorderBrush="Gold" CornerRadius="50" Visibility="Hidden">
                     <Border.Triggers>
                         <EventTrigger RoutedEvent="Border.Loaded">
                             <BeginStoryboard>
                                 <Storyboard >
-                                    <DoubleAnimation Storyboard.TargetName="AnimatedColorButton"
+                                    <DoubleAnimation Storyboard.TargetName="AnimatedColorButton1"
                                      Storyboard.TargetProperty="BorderBrush.Opacity"
                                      RepeatBehavior="Forever"
                                      AutoReverse="True"
@@ -401,6 +403,7 @@
                     </Button>
                 </Border>
             </StackPanel>
+            -->
             <StatusBar Height="30" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"
                        DockPanel.Dock="Bottom" RenderTransformOrigin="0.503,0.033">
                 <StatusBarItem>
