--- a/SilverTest/SilverTest/WaveHistoryWnd.xaml
+++ b/SilverTest/SilverTest/WaveHistoryWnd.xaml
@@ -6,33 +6,38 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SilverTest"
         xmlns:BasicWaveChart="clr-namespace:BasicWaveChart;assembly=BasicWaveChart" 
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="#ff444444"
+        
         Title="历史数据" Height="481" Width="800" Loaded="Window_Loaded">
     <Grid>
-        <StackPanel Orientation="Horizontal">
-            <StackPanel Width="200" Height="469" VerticalAlignment="Top"
+        <StackPanel x:Name="stackPanel" >
+            <Canvas Width="{Binding ElementName=stackPanel, Mode=OneWay}" Height="30" Background="#ff444444">
+
+            </Canvas>
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Width="200" Height="469" VerticalAlignment="Top"
                         Background="#ff7f7f7f"
                         >
-                <ListBox Width="196"  Height="465" x:Name="filelsb" DisplayMemberPath="Filename"
+                    <ListBox Width="196"  Height="465" x:Name="filelsb" DisplayMemberPath="Filename"
                          SelectionChanged="filelsb_SelectionChanged">
-                </ListBox>
-            </StackPanel>
-            <Canvas Width="586" Margin="5,0,0,4" MouseLeftButtonDown="Canvas_MouseLeftButtonDown" >
-                <Border BorderThickness="1" Height="465" Background="White" Width="586">
-                    <BasicWaveChart:BasicWaveChartUC x:Name="historywaveuc"
+                    </ListBox>
+                </StackPanel>
+                <Canvas Width="586" Margin="5,0,0,4" MouseLeftButtonDown="Canvas_MouseLeftButtonDown" >
+                    <Border BorderThickness="1" Height="465" Background="White" Width="586">
+                        <BasicWaveChart:BasicWaveChartUC x:Name="historywaveuc"
                                          RatioS="1:2" 
                                          MoveMode ="HORIZONTAL"
                                          NumberOfDValue="200000"
                                          TopBlankZone="20"
                                          RightBlankZone="30" Margin="0,22,9,58"
                                        />
-                </Border>
-                <Button x:Name="exitbtn" Width="80" Height="30" Canvas.Left="466" Canvas.Top="417" 
-                        FontSize="12"
-                        Click="exitbtn_Click">退出</Button>
-            </Canvas>
+                    </Border>
+                </Canvas>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
